EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==06/23/2009==
KLS: /surname changes
KLS: Implemented OP_ClearSurname
KLS: (gaeorn) Several 64-bit compile and runtime fixes
KLS: (gaeorn) NPC wander back rules.
Trevius: #texture will now allow player races to retain armor tint for both PCs and NPCs.
realityincarnate: bug fix for changing max_hp with the modifynpcstat command 

Required SQL: /utils/sql/svn/704_rules.sql

==06/22/2009==
Trevius: (Rabayn) When creating recipes, it is no longer required that componentcount be on separate rows from the successcount or failcount row.
Trevius: (takatok) AA Shield Block added.
Trevius: (Shendare) Armor Tint on NPCs can now be set on a per-slot basis.
cavedude: Added rules to disable/change #peqzone debuffs. Cleaned up code regarding it some.
Derision: Fixed the BestZ stuff I broke in Rev686
WildcardX: More work migrating EQBOTS code into BOTS.

Required SQL: /utils/sql/svn/702_aashieldblock_tint_table.sql
/utils/sql/svn/703_peqzone_rule.sql

==06/20/2009==
WildcardX: Migrated more code for BOTS from database.cpp to bot.cpp.
AndMetal: Added rule 'Zone:PEQZoneReuseTime' to adjust the reuse time on the #peqzone command. Defaults to 300 per change in Rev 612.
AndMetal: Correction to the item link code used in quests.
AndMetal: Cleaned up zone/StringIDs.h to make it easier to read, plus added some additional String IDs.
AndMetal: Cleaned up fishing some.
AndMetal: Fishing failures should now happen immediately instead of waiting for the timer to run.

Optional SQL: /utils/sql/svn/699_peqzone_rule.sql

==06/19/2009==
KLS: NPCs will no longer warp to their very first waypoint if they start on a grid, make sure they're spawned near their first waypoint!
KLS: Added quest::SetRunning(value) (1 for run, 0 for walk) to let a NPC run when out of combat instead of walk.
KLS: Added quest::IsRunning() return 0 for walk, 1 for run to let quest know if the npc is walking or running.