@@ -1,0 +1,1 @@
+ALTER TABLE `npc_types_tint` ADD `tint_set_name` text NOT NULL AFTER `id`;
